    Fixed: Customer must be allowed to set `name` field of any DNS resource record
    Fixed: Could not remove database; There is no such grant defined for user...
    Fixed: Could not set URL redirect when adding domain alias; Bad request error page
    Fixed: IDNs are shown in IDNA form in several places
    Fixed: iMSCP_Update_Database::addIndex() doesn't allows to set index length
    Removed: User deletion confirmation pages (admin/reseller level)
    Removed: iMSCP_NetworkCard class (replaced by iMSCP\Net class)
    Rewritten: FTP chooser interface to avoid usage of iframe

INSTALLER
    Added: Check for maximum supported PHP/Perl versions
    Added: Check to prevent downgrade attempts (when DB schema change is involved)
    Added: Conditional statement feature for install.xml files (copy_config items only)
    Fixed: Debug and verbose modes must be set early
    Fixed: Don't die on misconfigured server hostname. Just ask for a valid hostname instead
    Fixed: libmariadbclient18 package not provided in Debian Stretch (testing) repository
    Fixed: Plugin setup listeners are no longer registered (regression fix)
    Fixed: SQL user and password not correctly escaped in imscp.cnf file (Servers::sqld::mysql::installer)
    Moved: Master administrator questions and setup routines into the Package::FrontEnd::Installer package
    Renamed: imscp-setup script to imscp-reconfigure
    Transitional: Enforce PHP5 variant under Debian Stretch (testing) and Ubuntu 16.04 (Xenial Xerus)

PLUGINS
    Fixed: Plugin configuration not synced when triggering plugin list update (when a plugin is in error state)
    Fixed: The 'change' action must be automatically triggered on plugin list update, even for plugins with error state
    Fixed: Wrong events triggered when a plugin is being locked/unlocked
    Updated: API version to 1.0.4

SERVERS
    Added: Own i-MSCP logrorate configuration file for ProFTPD (xferlog file don't need to be rotated)